--- a/project_4_harmonic_oscillator/实验报告模板.md
+++ b/project_4_harmonic_oscillator/实验报告模板.md
@@ -14,15 +14,100 @@
 
 请简要描述：
 1. 简谐振子的运动方程及其物理意义
+
+运动方程 
+$$\ddot{x} + \omega^2 x = 0\$$
+，周期 
+$$T = 2\pi/\omega\$$
+，与振幅无关（等时性）。
+
 2. 非谐振子的运动方程及其特点
+
+以 
+$$\ddot{x} + \omega^2 x^3 = 0\$$
+为例，回复力非线性，周期随振幅变化（如 
+$$x^3\$$
+项导致大位移处加速度增强，周期缩短）。
+
 3. 数值求解方法（RK4）的基本原理
+
+四阶龙格 - 库塔法，通过加权平均斜率高精度求解微分方程，公式为：
+$$y_{n+1} = y_n + \frac{dt}{6}(k_1 + 2k_2 + 2k_3 + k_4)\$$
+其中 
+$$k_1, k_2, k_3, k_4\$$
+为不同步长的斜率。
 
 ### 2.2 计算方法
 
 请说明：
 1. 如何将二阶微分方程转化为一阶方程组
+
+对于二阶微分方程 
+$$\(\ddot{x} = f(x, \dot{x}, t)\)$$
+，引入状态向量 
+$$\(\mathbf{y} = [x, \dot{x}]^T\)$$
+，将其分解为两个一阶方程：
+
+速度方程：
+$$\dot{y}_1 = y_2\（\(y_1 = x\)，\(y_2 = \dot{x}\)）$$
+
+加速度方程：
+$$\dot{y}_2 = f(y_1, y_2, t)\$$
+
 2. RK4方法的具体实现步骤
+
+计算斜率 
+$$k_1\$$
+：
+$$k_1 = \mathbf{f}(\mathbf{y}_n, t_n)\$$
+
+计算斜率 
+$$k_2\$$
+：
+$$k_2 = \mathbf{f}\left(\mathbf{y}_n + \frac{dt}{2}k_1, \, t_n + \frac{dt}{2}\right)\$$
+
+计算斜率 
+$$k_3\$$
+：
+$$k_3 = \mathbf{f}\left(\mathbf{y}_n + \frac{dt}{2}k_2, \, t_n + \frac{dt}{2}\right)\$$
+
+计算斜率 
+$$k_4\$$
+：
+$$k_4 = \mathbf{f}\left(\mathbf{y}_n + dt \, k_3, \, t_n + dt\right)\$$
+
+更新状态：
+$$\mathbf{y}_{n+1} = \mathbf{y}_n + \frac{dt}{6}\left(k_1 + 2k_2 + 2k_3 + k_4\right)\$$
+
+原理
+
+通过四阶泰勒展开，对起点、两个中点、终点的斜率进行加权平均（权重比 1:2:2:1），实现 四阶精度，高效求解非线性微分方程（如非谐振子模型），平衡计算效率与数值稳定性。
+
 3. 周期分析的方法
+
+波峰检测：
+遍历位移数组 
+$$x(t)\$$
+，识别满足 
+$$x[i] > x[i-1]\$$
+且 
+$$x[i] > x[i+1]\$$
+的局部最大值（排除边界点），记录对应时间 
+$$t_i\$$
+（波峰时刻）。
+
+周期计算：若波峰数 
+$$N \geq 2\$$
+，周期 
+$$T = \frac{1}{N-1} \sum_{i=1}^{N-1} (t_{i+1} - t_i)\$$
+（相邻波峰时间差的平均值）。若 
+$$N < 2\$$
+，输出警告（如 “未找到足够波峰”），返回无效值（如 nan），避免误差放大。
+
+物理意义：
+周期反映振动的重复性，简谐振子的等时性（T 与振幅无关）和非谐振子的振幅依赖性（如 
+$$x^3\$$
+项导致 T 随振幅变化）可通过此方法量化分析。
 
 ## 3. 实验结果与分析
 
@@ -31,70 +116,165 @@
 #### 3.1.1 时间演化
 
 1. 插入位移随时间变化的图像
-2. 分析运动特征：
+![4-1](https://github.com/user-attachments/assets/4488f592-e4e0-4a3e-bceb-8ebd38dc7313)
+![4-2](https://github.com/user-attachments/assets/beb8f92c-b7f0-4d73-9b12-cfd8c9e30fda)
+位移x(t)与速度v(t)呈正弦曲线，相位差π/2
+
+3. 分析运动特征：
    - 振幅
+
+初始位移x(0)为 1 和 2
+
    - 周期
+
+均为6.2833（接近2π，验证T=2π/ω）
+
    - 相位
+
+速度超前位移π/2（简谐振动相位关系）
 
 #### 3.1.2 振幅对周期的影响
 
 1. 列出不同初始振幅下测得的周期数据
+
+x(0)=1和2时，周期均为6.2833
+
 2. 分析振幅与周期的关系
+
+周期与振幅无关（等时性）
+
 3. 解释等时性特征
+
+线性回复力F=-kx使周期仅由ω决定，与振幅无关
 
 ### 3.2 非谐振子分析
 
 #### 3.2.1 时间演化
 
 1. 插入位移随时间变化的图像
+![4-3](https://github.com/user-attachments/assets/1b37a63b-758c-48c1-b218-438cf7e65d8c)
+![4-4](https://github.com/user-attachments/assets/f98e4b79-47e8-4113-9d48-20ae28130ccc)
+位移x(t)波形非正弦（因F∝-x³非线性）
 2. 分析与简谐振子的区别：
    - 波形特征
+
+大振幅时更 “尖”（大位移处加速度a∝-x³更强，运动更快）
+
    - 周期变化
+
+x(0)=1时T=7.4160，x(0)=2时T=3.7083（振幅增大，周期减半，体现非线性依赖性）
 
 #### 3.2.2 振幅对周期的影响
 
 1. 列出不同初始振幅下测得的周期数据
+
+x(0)=1时T=7.4160，x(0)=2时T=3.7083
+
 2. 分析振幅与周期的关系
+
+周期与振幅负相关（振幅加倍，周期减半）
+
 3. 解释物理原因
+
+非线性回复力F∝-x³使大位移处运动加快，周期缩短（能量E∝x⁴，大振幅下能量增长快，运动时间减少）
 
 ### 3.3 相空间分析
 
 #### 3.3.1 简谐振子的相空间轨迹
 
 1. 插入相空间图
-2. 分析轨迹特征：
+![4-5](https://github.com/user-attachments/assets/1b327660-cfad-4e89-a289-381406b7bcb1)
+轨迹为椭圆
+
+3. 分析轨迹特征：
    - 形状
+  
+椭圆（能量 
+$$E=\frac{1}{2}v²+\frac{1}{2}x²\$$
+守恒，线性系统对称闭合轨迹）
+
    - 对称性
+
+关于原点对称（时间反演对称）
+
    - 物理意义
+
+直观展示线性振动的能量守恒与规律性
 
 #### 3.3.2 非谐振子的相空间轨迹
 
 1. 插入相空间图
+![4-6](https://github.com/user-attachments/assets/251a2959-8e0f-4516-a418-e1d63ffc4914)
+![4-7](https://github.com/user-attachments/assets/5b903f66-bd9f-43b4-aafc-da76b64e8adc)
+轨迹为非线性闭合曲线
+
 2. 分析轨迹特征：
    - 与简谐振子的区别
+
+与简谐椭圆不同，非谐轨迹在x方向扩展更显著（因E∝x⁴，大振幅时x范围更大）
+
    - 形状变化的物理解释
+
+非线性回复力导致相空间轨迹 “拉伸”，反映x³项的能量依赖特性（大位移处速度变化剧烈）
 
 ### 3.4 能量分析
 
 1. 计算并绘制系统能量随时间的变化
+
+简谐能量 
+$$E=\frac{1}{2}v²+\frac{1}{2}x²\$$
+，非谐能量 
+$$E=\frac{1}{2}v²+\frac{1}{4}x⁴\$$
+，均守恒
+
 2. 验证能量守恒定律
+
+数值计算中能量波动极小（RK4 高精度保证守恒）
+
 3. 分析数值误差的来源
+
+时间步长 dt、波峰检测阈值、浮点运算舍入
 
 ## 4. 讨论
 
 请讨论以下问题：
 
 1. 简谐振子和非谐振子的本质区别是什么？
+
+简谐：线性回复力，周期与振幅无关（等时性）
+
+非谐：非线性回复力，周期依赖振幅（非线性动力学）
+
 2. 数值计算中可能出现的误差来源有哪些？
+
+离散化误差（dt 过大）、波峰检测误差、浮点舍入误差
+
 3. 如何改进数值方法以提高计算精度？
+
+减小 dt，采用高阶方法（如 RK5），优化极值检测，使用自适应步长
+
 4. 这些振子模型在实际物理系统中的应用例子有哪些？
+
+简谐：小角度单摆、LC 电路；非谐：大角度单摆、混沌系统（如 Duffing 振子）
 
 ## 5. 结论
 
 总结本实验的主要发现：
 1. 简谐振子的特征及验证结果
+
+特征：正弦运动、等时性、相空间椭圆。
+
+验证：周期 6.2833(2π)，等时性变化率0.00%，完全符合理论
+
 2. 非谐振子的特征及验证结果
+
+特征：非线性波形、周期随振幅显著变化（减半）、相空间非线性轨迹。
+
+验证：振幅加倍时周期减半（变化率-50%），体现x³项的非线性效应
+
 3. 数值方法的有效性分析
+
+RK4 有效求解线性 / 非线性振子，相空间分析直观展示能量与运动关系，为动力学研究提供高精度工具
 
 ## 6. 参考文献
 
@@ -105,5 +285,164 @@
 ## 附录：代码
 
 ```python
-# 在这里粘贴实验中使用的Python代码
+import numpy as np
+import matplotlib.pyplot as plt
+from typing import Tuple, Callable, List
+
+# 设置字体，确保英文字符正常显示
+plt.rcParams.update({
+    "font.family": ["Arial", "sans-serif"],
+    "axes.unicode_minus": False,  # 确保负号正确显示
+})
+
+def harmonic_oscillator_ode(state: np.ndarray, t: float, omega: float = 1.0) -> np.ndarray:
+    x, v = state
+    dx_dt = v
+    dv_dt = -omega**2 * x
+    return np.array([dx_dt, dv_dt])
+
+def anharmonic_oscillator_ode(state: np.ndarray, t: float, omega: float = 1.0) -> np.ndarray:
+    x, v = state
+    dx_dt = v
+    dv_dt = -omega**2 * x**3
+    return np.array([dx_dt, dv_dt])
+
+def rk4_step(ode_func: Callable, state: np.ndarray, t: float, dt: float, **kwargs) -> np.ndarray:
+    k1 = ode_func(state, t, **kwargs)
+    k2 = ode_func(state + 0.5 * dt * k1, t + 0.5 * dt, **kwargs)
+    k3 = ode_func(state + 0.5 * dt * k2, t + 0.5 * dt, **kwargs)
+    k4 = ode_func(state + dt * k3, t + dt, **kwargs)
+    
+    next_state = state + (dt / 6.0) * (k1 + 2 * k2 + 2 * k3 + k4)
+    return next_state
+
+def solve_ode(ode_func: Callable, initial_state: np.ndarray, t_span: Tuple[float, float], 
+              dt: float, **kwargs) -> Tuple[np.ndarray, np.ndarray]:
+    t_start, t_end = t_span
+    num_steps = int((t_end - t_start) / dt) + 1
+    t_points = np.linspace(t_start, t_end, num_steps)
+    state_shape = initial_state.shape
+    
+    # Initialize state array
+    states = np.zeros((num_steps, *state_shape))
+    states[0] = initial_state
+    
+    # Solve ODE using RK4 method
+    for i in range(num_steps - 1):
+        states[i+1] = rk4_step(ode_func, states[i], t_points[i], dt, **kwargs)
+    
+    return t_points, states
+
+def plot_time_evolution(t: np.ndarray, states: np.ndarray, title: str) -> None:
+    plt.figure(figsize=(10, 6))
+    plt.plot(t, states[:, 0], 'b-', label='Displacement x')
+    plt.plot(t, states[:, 1], 'r-', label='Velocity v')
+    plt.title(title, fontsize=14)
+    plt.xlabel('Time t', fontsize=12)
+    plt.ylabel('State Variables', fontsize=12)
+    plt.grid(True)
+    plt.legend()
+    plt.tight_layout()
+    plt.show()
+
+def plot_phase_space(states: np.ndarray, title: str) -> None:
+    plt.figure(figsize=(10, 6))
+    plt.plot(states[:, 0], states[:, 1], 'g-')
+    plt.title(title, fontsize=14)
+    plt.xlabel('Displacement x', fontsize=12)
+    plt.ylabel('Velocity v', fontsize=12)
+    plt.grid(True)
+    plt.axis('equal')  # Make axes scales equal for better visualization of ellipses
+    plt.tight_layout()
+    plt.show()
+
+def analyze_period(t: np.ndarray, states: np.ndarray) -> float:
+    x = states[:, 0]
+    peaks = []
+    
+    # Find local maxima (peaks)
+    for i in range(1, len(x) - 1):
+        if x[i] > x[i-1] and x[i] > x[i+1] and x[i] > 0.9 * np.max(x):
+            peaks.append(t[i])
+    
+    # Calculate average period
+    if len(peaks) < 2:
+        print("Warning: Not enough peaks found to calculate period")
+        return np.nan
+    
+    periods = np.diff(peaks)
+    avg_period = np.mean(periods)
+    
+    return avg_period
+
+def main():
+    # Set parameters
+    omega = 1.0
+    t_span = (0, 50)
+    dt = 0.01
+    
+    # Task 1 - Numerical solution of the harmonic oscillator
+    initial_state_harmonic = np.array([1.0, 0.0])  # x(0)=1, v(0)=0
+    t_harmonic, states_harmonic = solve_ode(
+        harmonic_oscillator_ode, 
+        initial_state_harmonic, 
+        t_span, 
+        dt, 
+        omega=omega
+    )
+    plot_time_evolution(t_harmonic, states_harmonic, "Time Evolution of Harmonic Oscillator (Initial x=1)")
+    period_harmonic_1 = analyze_period(t_harmonic, states_harmonic)
+    print(f"Period of harmonic oscillator (Initial x=1): {period_harmonic_1:.4f}")
+    
+    # Task 2 - Analysis of amplitude effect on period
+    initial_state_harmonic_2 = np.array([2.0, 0.0])  # x(0)=2, v(0)=0
+    _, states_harmonic_2 = solve_ode(
+        harmonic_oscillator_ode, 
+        initial_state_harmonic_2, 
+        t_span, 
+        dt, 
+        omega=omega
+    )
+    plot_time_evolution(t_harmonic, states_harmonic_2, "Time Evolution of Harmonic Oscillator (Initial x=2)")
+    period_harmonic_2 = analyze_period(t_harmonic, states_harmonic_2)
+    print(f"Period of harmonic oscillator (Initial x=2): {period_harmonic_2:.4f}")
+    
+    print("\nVerification of isochronism for harmonic oscillator:")
+    print(f"Period change rate with amplitude: {(period_harmonic_2/period_harmonic_1 - 1)*100:.2f}%")
+    
+    # Task 3 - Numerical analysis of anharmonic oscillator
+    initial_state_anharmonic_1 = np.array([1.0, 0.0])  # x(0)=1, v(0)=0
+    t_anharmonic, states_anharmonic_1 = solve_ode(
+        anharmonic_oscillator_ode, 
+        initial_state_anharmonic_1, 
+        t_span, 
+        dt, 
+        omega=omega
+    )
+    plot_time_evolution(t_anharmonic, states_anharmonic_1, "Time Evolution of Anharmonic Oscillator (Initial x=1)")
+    period_anharmonic_1 = analyze_period(t_anharmonic, states_anharmonic_1)
+    print(f"\nPeriod of anharmonic oscillator (Initial x=1): {period_anharmonic_1:.4f}")
+    
+    initial_state_anharmonic_2 = np.array([2.0, 0.0])  # x(0)=2, v(0)=0
+    _, states_anharmonic_2 = solve_ode(
+        anharmonic_oscillator_ode, 
+        initial_state_anharmonic_2, 
+        t_span, 
+        dt, 
+        omega=omega
+    )
+    plot_time_evolution(t_anharmonic, states_anharmonic_2, "Time Evolution of Anharmonic Oscillator (Initial x=2)")
+    period_anharmonic_2 = analyze_period(t_anharmonic, states_anharmonic_2)
+    print(f"Period of anharmonic oscillator (Initial x=2): {period_anharmonic_2:.4f}")
+    
+    print("\nAmplitude dependence of anharmonic oscillator:")
+    print(f"Period change rate with increased amplitude: {(period_anharmonic_2/period_anharmonic_1 - 1)*100:.2f}%")
+    
+    # Task 4 - Phase space analysis
+    plot_phase_space(states_harmonic, "Phase Space Trajectory of Harmonic Oscillator (Initial x=1)")
+    plot_phase_space(states_anharmonic_1, "Phase Space Trajectory of Anharmonic Oscillator (Initial x=1)")
+    plot_phase_space(states_anharmonic_2, "Phase Space Trajectory of Anharmonic Oscillator (Initial x=2)")
+
+if __name__ == "__main__":
+    main()
 ```   
